--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,6 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://101.200.161.243:3306/online_learning?useSSL=false&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://101.200.161.243:3306/online_learning?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: root
     password: 050316
