--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+server.port=8080
+
 spring.application.name=java_practice
+spring.datasource.url=jdbc:mysql://101.200.161.243:3306/online_learning?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=java_dev
+spring.datasource.password=050316
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
